# my-vault

./: .gitignore  Cargo.toml  readme.md
bruno/my-vault/: bruno.json  collection.bru
cli-old/: Cargo.toml
cli-old/src/: lib.rs
cli-old/src/cli/: logout.rs  mod.rs
cli-old/src/config/: client.rs  mod.rs  user.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  client.rs  config.rs  constants.rs  error.rs  lib.rs  main.rs  tui.rs
crates/cli/src/cli/: login.rs  mod.rs
crates/cli/src/command/: config.rs  info.rs  mod.rs
crates/cli/src/config/: client.rs  mod.rs  user.rs
crates/cli/tests/: lib.rs  test.rs
crates/daemon/: Cargo.toml  readme.md
crates/daemon/migrations/: 20251002103552_create-database.sql  20251025035630_remove-human-info.sql  20251028082430_add-secrets.sql  20251029080237_soft-delete-users.sql
crates/daemon/src/: client.rs  config.rs  constants.rs  error.rs  main.rs  system_tray.rs
crates/daemon/src/config/: connection.rs  mod.rs  user.rs
crates/daemon/src/controller/: client.rs  collection.rs  mod.rs  source.rs  user.rs
crates/daemon/src/database/: mod.rs
crates/daemon/src/database/controller/: client.rs  collection.rs  mod.rs  secret.rs  secrets.rs  user.rs
crates/daemon/src/database/view/: collection.rs  mod.rs  secret.rs  source.rs  user.rs
crates/daemon/src/middleware/: authentication.rs  authorization.rs  mod.rs  set_header.rs
crates/daemon/src/model/: user.rs
crates/daemon/src/schema/: collection.rs  secret.rs  source.rs  user.rs
crates/daemon/src/service/: auth.rs  client.rs  echo.rs  health.rs  mod.rs  user.rs
crates/daemon/src/view/: collection.rs  user.rs
crates/daemon/tests/: lib.rs
crates/shared-core/: Cargo.toml  readme.md
crates/shared-core/migrations/: 20251018010505_sqlite-test.sql
crates/shared-core/src/: config.rs  constants.rs  error.rs  input.rs  lib.rs  rng.rs  signal.rs  time.rs  tracing.rs
crates/shared-core/src/config/: connection.rs  mod.rs  user.rs
crates/shared-core/src/crypt/: argon2.rs  jwt.rs  jwt_claim.rs  mod.rs
crates/shared-core/src/database/: crud.rs  mod.rs
crates/shared-core/src/serde/: derive.rs  enum_variants.rs  mod.rs  struct_fields.rs
crates/shared-core/src/service/: echo.rs  mod.rs
crates/shared-core/src/sys/: mod.rs  tracing.rs
crates/shared-core/tests/: jwt.rs
crates/shared-message/: Cargo.toml
crates/shared-message/src/: error.rs  lib.rs  traits.rs  util.rs
crates/shared-message/src/message/: example.rs  mod.rs
crates/shared-message/tests/: header.rs  message.rs
crates/shared-service/: Cargo.toml  build.rs  readme.md
crates/shared-service/src/: echo.rs  lib.rs
crates/shared-types/: Cargo.toml
kreya/: directory.krpref  my-vault-rs.krproj  readme.md
kreya/vault/client/Client/: Info.krop
kreya/vault/user/User/: Add.krop  Auth.krop  Refresh-request.json  Refresh.krop
protobufs/: auth.proto  client.proto  echo.proto  user.proto
test-data/config/: unknown-fields.toml
