[package]
name = "cli"
version.workspace = true
edition.workspace = true

[dependencies]
shared-core = { path = "../shared-core" }
shared-service = { path = "../shared-service" }

clap = { workspace = true, features = ["derive"]}
console = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "time", "signal", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tonic = { workspace = true }