[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[dependencies]
shared-core = { path = "../shared-core" }
shared-service = { path = "../shared-service" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
prost = { workspace = true }
thiserror = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-middleware = { workspace = true }
tonic-prost = { workspace = true }
tonic-reflection = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }
