[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[dependencies]
shared-core = { path = "../shared-core" }
shared-service = { path = "../shared-service" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tonic-health = { workspace = true }
tonic-middleware = { workspace = true }
tonic-prost = { workspace = true }
tonic-reflection = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

# This needs to be here since we are overiding the features to use sqlcipher for
# an encrypted sqlite database.
libsqlite3-sys = { workspace = true }