[package]
name = "daemon"
version.workspace = true
edition.workspace = true

[dependencies]
shared-core = { path = "../shared-core" }

anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
dirs = { workspace = true }
lazy_static = { workspace = true }
poem = { workspace = true }
poem-openapi = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
validator = { workspace = true }

# This needs to be here since we are overiding the features to use sqlcipher for
# an encrypted sqlite database.
libsqlite3-sys = { workspace = true }