[package]
name = "shared-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true, features = ["serde"] }
dirs = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true, features = ["rust_crypto"] }
lazy_static = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true, features = ["futures-v0_3"] }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite", "chrono", "json", "uuid",] }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["fs", "macros", "rt-multi-thread", "time", "signal", "sync"] }
tokio-util = { workspace = true, features = ["rt"] }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter"] }
uuid = { workspace = true, features = ["v4", "serde"] }