[package]
name = "shared-core"
version.workspace = true
edition.workspace = true

[dependencies]
chrono = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
jsonwebtoken = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
rsa = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
signal-hook = { workspace = true }
signal-hook-tokio = { workspace = true }
sqlx = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-appender = { workspace = true }
tracing-subscriber = { workspace = true }
uuid = { workspace = true }